packages/toplevel_expect_test.v0.10.0/test/test.mlt
[%%org {x|
#+TITLE: How to Use Toplevel Files

What follows are some simple examples demonstrating how to write a toplevel file. You can
think of it as being just like a Utop session, consisting of statements that produce some
output and, in ~[%%expect]~ blocks, the correct output itself.

If you'd like to add markup explaining parts of your toplevel session (like in this very
file), you can embed it in an org-mode block like so:

#+BEGIN_SRC ocaml
  [%%org {|
    * This is an org-mode header
  |}];;
#+END_SRC

Everything within the org block will be ignored by the compiler as if it were a comment.
For that behavior to be enabled you need to add the ~ppx_org~ extension to the project.
Just add it to your jbuild like so:

#+BEGIN_SRC
  (toplevel_expect_tests ((libraries (ppx_org))))
#+END_SRC

** Publishing toplevel files to the wiki

Wikipub understands .mlt files and can publish them to the wiki. This is useful if you
want to write documentation that compiles: You write your toplevel file, letting the
compiler ensure that your ~expect~ tests pass, and then publish those examples along with
commentary in ~org~ blocks, in a literate style.

To get this working, all you have to do is tell Wikipub to publish the directory that
includes your *.mlt file, with one of the following stanzas in your jbuild. Both work
because .mlt is now part of Wikipub's ~Standard_formats~:

#+BEGIN_SRC
  (wikipub (Files (test.mlt)))
  ;(wikipub Standard_formats) also works
#+END_SRC


** Onto the examples!
|x}];;

[%%org "*** Errors"];;
let x = 1 + 'e';;
[%%expect{|
Line _, characters 12-15:
Error: This expression has type char but an expression was expected of type
         int
|}];;

[%%org "*** Printing"];;
print_string "foo\n";;
print_string "blah";;
[%%expect{|
foo
blah
|}];;

[%%org {|
Now we'll go into verbose mode. We add a ~#verbose true~ declaration on its own line.
#+BEGIN_SRC ocaml
#verbose true;;
#+END_SRC
|}];;

#verbose true;;

[%%org {|
Rather than explicitly having to output something, every statement's return value will be
now be expected in the expect block that follows.
|}];;

[%%org "*** Printing with verbose turned on"];;
print_string "foo"
[%%expect{|
- : unit = ()
foo
|}];;

[%%org "*** Value printing"];;
open Sexplib
let x = Sexp.List [Atom "abc"; Atom "42"]
[%%expect{|
val x : Type.t = (abc 42)
|}];;
